--- a/nlp-with-attention/week-2/C4_W2_Assignment.ipynb
+++ b/nlp-with-attention/week-2/C4_W2_Assignment.ipynb
@@ -976,12 +976,12 @@
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "    \n",
     "    # Hint: mask size should be equal to L_q. Remember that q has shape (batch_size, L_q, d)\n",
-    "    mask_size = None\n",
+    "    mask_size = q.shape[-2]\n",
     "\n",
     "    # Creates a matrix with ones below the diagonal and 0s above. It should have shape (1, mask_size, mask_size)\n",
     "    # Notice that 1's and 0's get casted to True/False by setting dtype to jnp.bool_\n",
     "    # Use jnp.tril() - Lower triangle of an array and jnp.ones()\n",
-    "    mask = jnp.tril(jnp.ones((None, None, None), dtype=jnp.bool_), k=0)\n",
+    "    mask = jnp.tril(jnp.ones((1, mask_size, mask_size), dtype=jnp.bool_), k=0)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -1043,11 +1043,11 @@
     "        \n",
     "        # Length of the sequence\n",
     "        # Should be size of x's first dimension without counting the batch dim\n",
-    "        seqlen = None\n",
+    "        seqlen = x.shape[1]\n",
     "        # Reshape x using jnp.reshape() to shape (batch_size, n_heads, seqlen, d_head)\n",
-    "        x = None\n",
+    "        x = jnp.reshape(x, ( -1, n_heads, seqlen, d_head))\n",
     "        # Transpose x using jnp.transpose() to shape (batch_size, seqlen, n_heads, d_head)\n",
-    "        x = None\n",
+    "        x = jnp.transpose(x, ( 0, 2, 1 , 3))\n",
     "        \n",
     "        ### END CODE HERE ###\n",
     "        \n",
@@ -1173,22 +1173,22 @@
     "    # HINT: The second argument to tl.Fn() is an uncalled function (without the parentheses)\n",
     "    # Since you are dealing with closures you might need to call the outer \n",
     "    # function with the correct parameters to get the actual uncalled function.\n",
-    "    ComputeAttentionHeads = tl.Fn('AttnHeads', None, n_out=1)\n",
+    "    ComputeAttentionHeads = tl.Fn('AttnHeads', compute_attention_heads_closure(n_heads, d_head), n_out=1)\n",
     "        \n",
     "\n",
     "    return tl.Serial(\n",
     "        tl.Branch( # creates three towers for one input, takes activations and creates queries keys and values\n",
-    "            [None, None], # queries\n",
-    "            [None, None], # keys\n",
-    "            [None, None], # values\n",
+    "            [tl.Dense(d_feature), ComputeAttentionHeads], # queries\n",
+    "            [tl.Dense(d_feature), ComputeAttentionHeads], # keys\n",
+    "            [tl.Dense(d_feature), ComputeAttentionHeads], # values\n",
     "        ),\n",
     "        \n",
-    "        tl.Fn('DotProductAttn', None, n_out=1), # takes QKV\n",
+    "        tl.Fn('DotProductAttn', dot_product_self_attention, n_out=1), # takes QKV\n",
     "        # HINT: The second argument to tl.Fn() is an uncalled function\n",
     "        # Since you are dealing with closures you might need to call the outer \n",
     "        # function with the correct parameters to get the actual uncalled function.\n",
-    "        tl.Fn('AttnOutput', None, n_out=1), # to allow for parallel\n",
-    "        None # Final dense layer\n",
+    "        tl.Fn('AttnOutput', compute_attention_output_closure(n_heads, d_head), n_out=1), # to allow for parallel\n",
+    "        tl.Dense(d_feature) # Final dense layer\n",
     "    )\n",
     "\n",
     "    ### END CODE HERE ###"
