Week 2 notebook WIP

--- a/nlp-with-attention/week-2/C4_W2_Assignment.ipynb
+++ b/nlp-with-attention/week-2/C4_W2_Assignment.ipynb
@@ -1292,40 +1292,40 @@
     "    \n",
     "    # Create masked multi-head attention block using CausalAttention function\n",
     "    causal_attention = CausalAttention( \n",
-    "                        None,\n",
-    "                        n_heads=None,\n",
-    "                        mode=None\n",
+    "                        d_model,\n",
+    "                        n_heads=n_heads,\n",
+    "                        mode=mode\n",
     "                        )\n",
     "\n",
     "    # Create feed-forward block (list) with two dense layers with dropout and input normalized\n",
     "    feed_forward = [ \n",
     "        # Normalize layer inputs\n",
-    "        None,\n",
+    "        tl.LayerNorm(),\n",
     "        # Add first feed forward (dense) layer (don't forget to set the correct value for n_units)\n",
-    "        None,\n",
+    "        tl.Dense(d_ff),\n",
     "        # Add activation function passed in as a parameter (you need to call it!)\n",
-    "        None, # Generally ReLU\n",
+    "        ff_activation(), # Generally ReLU\n",
     "        # Add dropout with rate and mode specified (i.e., don't use dropout during evaluation)\n",
-    "        None,\n",
+    "        tl.Dropout(rate=dropout, mode=mode),\n",
     "        # Add second feed forward layer (don't forget to set the correct value for n_units)\n",
-    "        None,\n",
+    "        tl.Dense(d_model),\n",
     "        # Add dropout with rate and mode specified (i.e., don't use dropout during evaluation)\n",
-    "        None\n",
+    "        tl.Dropout(rate=dropout,mode=mode)\n",
     "    ]\n",
     "\n",
     "    # Add list of two Residual blocks: the attention with normalization and dropout and feed-forward blocks\n",
     "    return [\n",
     "      tl.Residual(\n",
     "          # Normalize layer input\n",
-    "          None,\n",
+    "          tl.LayerNorm(),\n",
     "          # Add causal attention block previously defined (without parentheses)\n",
-    "          None,\n",
+    "          causal_attention,\n",
     "          # Add dropout with rate and mode specified\n",
-    "          None\n",
+    "          tl.Dropout(rate=dropout, mode=mode)\n",
     "        ),\n",
     "      tl.Residual(\n",
     "          # Add feed forward block (without parentheses)\n",
-    "          None\n",
+    "          feed_forward\n",
     "        ),\n",
     "      ]\n",
     "    ### END CODE HERE ###"
