FInished week 2 notebook

--- a/nlp-with-attention/week-2/C4_W2_Assignment.ipynb
+++ b/nlp-with-attention/week-2/C4_W2_Assignment.ipynb
@@ -1467,32 +1467,33 @@
     "    # Embedding inputs and positional encoder\n",
     "    positional_encoder = [ \n",
     "        # Add embedding layer of dimension (vocab_size, d_model)\n",
-    "        None,\n",
+    "        tl.Embedding(vocab_size, d_model),\n",
     "        # Use dropout with rate and mode specified\n",
-    "        None,\n",
+    "        tl.Dropout(rate=dropout, mode=mode),\n",
     "        # Add positional encoding layer with maximum input length and mode specified\n",
-    "        None]\n",
+    "        tl.PositionalEncoding(max_len=max_len, mode=mode)]\n",
     "\n",
     "    # Create stack (list) of decoder blocks with n_layers with necessary parameters\n",
     "    decoder_blocks = [ \n",
-    "        None for _ in range(None)]\n",
+    "        DecoderBlock(d_model, d_ff, n_heads,\n",
+    "                    dropout, mode, ff_activation) for _ in range(n_layers)]\n",
     "\n",
     "    # Create the complete model as written in the figure\n",
     "    return tl.Serial(\n",
     "        # Use teacher forcing (feed output of previous step to current step)\n",
-    "        None, # Specify the mode!\n",
+    "        tl.ShiftRight(mode=mode), # Specify the mode!\n",
     "        # Add positional encoder\n",
-    "        None,\n",
+    "        positional_encoder,\n",
     "        # Add decoder blocks\n",
-    "        None,\n",
+    "        decoder_blocks,\n",
     "        # Normalize layer\n",
-    "        None,\n",
+    "        tl.LayerNorm(),\n",
     "\n",
     "        # Add dense layer of vocab_size (since need to select a word to translate to)\n",
     "        # (a.k.a., logits layer. Note: activation already set by ff_activation)\n",
-    "        None,\n",
+    "        tl.Dense(vocab_size),\n",
     "        # Get probabilities with Logsoftmax\n",
-    "        None\n",
+    "        tl.LogSoftmax()\n",
     "    )\n",
     "\n",
     "    ### END CODE HERE ###"
@@ -1642,16 +1643,16 @@
     "\n",
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "    train_task = training.TrainTask( \n",
-    "      labeled_data=None, # The training generator\n",
-    "      loss_layer=None, # Loss function \n",
-    "      optimizer=None, # Optimizer (Don't forget to set LR to 0.01)\n",
-    "      lr_schedule=None,\n",
+    "      labeled_data=train_gen, # The training generator\n",
+    "      loss_layer=tl.CrossEntropyLoss(), # Loss function \n",
+    "      optimizer=trax.optimizers.Adam(0.01), # Optimizer (Don't forget to set LR to 0.01)\n",
+    "      lr_schedule=lr_schedule,\n",
     "      n_steps_per_checkpoint=10\n",
     "    )\n",
     "\n",
     "    eval_task = training.EvalTask( \n",
-    "      labeled_data=None, # The evaluation generator\n",
-    "      metrics=[None, None] # CrossEntropyLoss and Accuracy\n",
+    "      labeled_data=eval_gen, # The evaluation generator\n",
+    "      metrics=[tl.CrossEntropyLoss(), tl.Accuracy()] # CrossEntropyLoss and Accuracy\n",
     "    )\n",
     "\n",
     "    ### END CODE HERE ###\n",
@@ -1789,22 +1790,22 @@
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "    \n",
     "    # current output tokens length\n",
-    "    token_length = None\n",
+    "    token_length = len(cur_output_tokens)\n",
     "    # calculate the minimum power of 2 big enough to store token_length\n",
     "    # HINT: use np.ceil() and np.log2()\n",
     "    # add 1 to token_length so np.log2() doesn't receive 0 when token_length is 0\n",
-    "    padded_length = None**int(np.ceil(np.log2(None + None)))\n",
+    "    padded_length = 2**int(np.ceil(np.log2(token_length + 1)))\n",
     "\n",
     "    # Fill cur_output_tokens with 0's until it reaches padded_length\n",
-    "    padded = None + [0] * (None - None)\n",
+    "    padded = cur_output_tokens + [0] * (padded_length - token_length)\n",
     "    padded_with_batch = np.array(padded)[None, :] # Don't replace this 'None'! This is a way of setting the batch dim\n",
     "\n",
     "    # model expects a tuple containing two padded tensors (with batch)\n",
-    "    output, _ = model((None, None)) \n",
+    "    output, _ = model((padded_with_batch, padded_with_batch))  \n",
     "    # HINT: output has shape (1, padded_length, vocab_size)\n",
     "    # To get log_probs you need to index output with 0 in the first dim\n",
     "    # token_length in the second dim and all of the entries for the last dim.\n",
-    "    log_probs = output[None, None, None]\n",
+    "    log_probs = output[0, token_length, :]\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -1875,18 +1876,18 @@
     "    \n",
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "    # Use tokenize()\n",
-    "    cur_output_tokens = None + [0]\n",
+    "    cur_output_tokens = tokenize(input_sentence) + [0]\n",
     "    generated_output = [] \n",
     "    cur_output = 0 \n",
     "    EOS = 1 \n",
     "    \n",
     "    while cur_output != EOS:\n",
     "        # Get next symbol\n",
-    "        cur_output = next_symbol(None, None)\n",
+    "        cur_output = next_symbol(cur_output_tokens, model)\n",
     "        # Append next symbol to original sentence\n",
-    "        cur_output_tokens.append(None)\n",
+    "        cur_output_tokens.append(cur_output)\n",
     "        # Append next symbol to generated sentence\n",
-    "        generated_output.append(None)\n",
+    "        generated_output.append(cur_output)\n",
     "        print(detokenize(generated_output))\n",
     "    \n",
     "    ### END CODE HERE ###\n",
