Week 3 Notebook completed

--- a/nlp-with-attention/week-3/C4_W3_Assignment.ipynb
+++ b/nlp-with-attention/week-3/C4_W3_Assignment.ipynb
@@ -866,49 +866,49 @@
     "    # Attention block\n",
     "    attention = tl.Attention( \n",
     "        # Use dimension of the model\n",
-    "        d_feature=None,\n",
+    "        d_feature=d_model,\n",
     "        # Set it equal to number of attention heads\n",
-    "        n_heads=None,\n",
+    "        n_heads=n_heads,\n",
     "        # Set it equal `dropout`\n",
-    "        dropout=None,\n",
+    "        dropout=dropout,\n",
     "        # Set it equal `mode`\n",
-    "        mode=None\n",
+    "        mode=mode\n",
     "    )\n",
     "    \n",
     "    # Call the function `FeedForwardBlock` (implemented before) and pass in the parameters\n",
     "    feed_forward = FeedForwardBlock( \n",
-    "        None,\n",
-    "        None,\n",
-    "        None,\n",
-    "        None,\n",
-    "        None,\n",
-    "        None\n",
+    "        d_model,\n",
+    "        d_ff,\n",
+    "        dropout,\n",
+    "        dropout_shared_axes,\n",
+    "        mode,\n",
+    "        ff_activation \n",
     "    )\n",
     "    \n",
     "    # Dropout block\n",
     "    dropout_ = tl.Dropout( \n",
     "        # set it equal to `dropout`\n",
-    "        rate=None,\n",
+    "        rate=dropout,\n",
     "        # set it equal to the axes on which to share dropout mask\n",
-    "        shared_axes=None,\n",
+    "        shared_axes=dropout_shared_axes,\n",
     "        # set it equal to `mode`\n",
-    "        mode=None\n",
+    "        mode=mode\n",
     "    )\n",
     "    \n",
     "    encoder_block = [ \n",
     "        # add `Residual` layer\n",
     "        tl.Residual(\n",
     "            # add norm layer\n",
-    "            None,\n",
+    "            tl.LayerNorm(),\n",
     "            # add attention\n",
-    "            None,\n",
+    "            attention,\n",
     "            # add dropout\n",
-    "            None,\n",
+    "            dropout_,\n",
     "        ),\n",
     "        # add another `Residual` layer\n",
     "        tl.Residual(\n",
     "            # add feed forward\n",
-    "            None,\n",
+    "            feed_forward,\n",
     "        ),\n",
     "    ]\n",
     "    \n",
@@ -1073,30 +1073,31 @@
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' WITH YOUR CODE) ###\n",
     "    \n",
     "    # Use the function `EncoderBlock` (implemented above) and pass in the parameters over `n_layers`\n",
-    "    encoder_blocks = [None for _ in range(None)]\n",
+    "    encoder_blocks = [EncoderBlock(d_model, d_ff, n_heads, dropout,\n",
+    "                        dropout_shared_axes, mode, ff_activation) for _ in range(n_layers)]\n",
     "\n",
     "    # Assemble and return the model.\n",
     "    return tl.Serial(\n",
     "        # Encode\n",
     "        tl.Branch(\n",
     "            # Use `positional_encoder`\n",
-    "            None,\n",
+    "            positional_encoder,\n",
     "            # Use trax padding mask\n",
-    "            None,\n",
+    "            tl.PaddingMask(),\n",
     "        ),\n",
     "        # Use `encoder_blocks`\n",
-    "        None,\n",
+    "        encoder_blocks,\n",
     "        # Use select layer\n",
-    "        None,\n",
+    "        tl.Select([0], n_in=2),\n",
     "        # Use trax layer normalization\n",
-    "        None,\n",
+    "        tl.LayerNorm(),\n",
     "        # Map to output categories.\n",
     "        # Use trax mean. set axis to 1\n",
-    "        None,\n",
+    "        tl.Mean(axis=1),\n",
     "        # Use trax Dense using `n_classes`\n",
-    "        None,\n",
+    "        tl.Dense(n_classes),\n",
     "        # Use trax log softmax\n",
-    "        None,\n",
+    "        tl.LogSoftmax(),\n",
     "    )\n",
     "\n",
     "    ### END CODE HERE ###"
