Implemented "reversible_layer_forward"

--- a/nlp-with-attention/week-4/C4_W4_Assignment.ipynb
+++ b/nlp-with-attention/week-4/C4_W4_Assignment.ipynb
@@ -332,18 +332,18 @@
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' WITH YOUR CODE) ###\n",
     "    \n",
     "        # get i'th element of file log list\n",
-    "        cur_log = None\n",
+    "        cur_log = data_db[file]['log'][i]\n",
     "        \n",
     "        # check if i is even\n",
-    "        if None:                   \n",
+    "        if i%2==0:                   \n",
     "            # append the 1st delimiter string\n",
-    "            result += None\n",
+    "            result += delimiter_1\n",
     "        else: \n",
     "            # append the 2nd delimiter string\n",
-    "            result += None\n",
+    "            result += delimiter_2\n",
     "        \n",
     "        # append the message text from the log\n",
-    "        result += None\n",
+    "        result += cur_log[\"text\"]\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -856,13 +856,13 @@
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' WITH YOUR CODE) ###\n",
     "    \n",
     "    # get y1 using equation 3\n",
-    "    y1 = None\n",
+    "    y1 = x1+f(x2)\n",
     "    \n",
     "    # get y2 using equation 4\n",
-    "    y2 = None\n",
+    "    y2 = x2+g(y1)\n",
     "    \n",
     "    # concatenate y1 and y2 along the depth dimension. be sure output is of type np.ndarray\n",
-    "    y = None\n",
+    "    y = np.concatenate((y1, y2))\n",
     "    \n",
     "    ### END CODE HERE ### \n",
     "    return y"
@@ -1649,7 +1649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
