Completed week 4 notebook

--- a/nlp-with-attention/week-4/C4_W4_Assignment.ipynb
+++ b/nlp-with-attention/week-4/C4_W4_Assignment.ipynb
@@ -1072,13 +1072,13 @@
     "    # initialize an instance of Trax's ReformerLM class\n",
     "    model = trax.models.reformer.ReformerLM( \n",
     "        # set vocab size\n",
-    "        None,\n",
+    "        vocab_size=vocab_size,\n",
     "        # set number of layers\n",
-    "        None,\n",
+    "        n_layers = n_layers,\n",
     "        # set mode\n",
-    "        None,\n",
+    "        mode = mode,\n",
     "        # set attention type\n",
-    "        None\n",
+    "        attention_type = attention_type\n",
     "    )\n",
     "    \n",
     "    ### END CODE HERE ###\n",
@@ -1173,23 +1173,23 @@
     "    # define the train task\n",
     "    train_task = training.TrainTask(            \n",
     "        # labeled data\n",
-    "        None,\n",
+    "        labeled_data=train_gen,\n",
     "        # loss layer\n",
-    "        None,\n",
+    "        loss_layer=tl.CrossEntropyLoss(),\n",
     "        # optimizer\n",
-    "        None,\n",
+    "        optimizer=trax.optimizers.Adam(0.01),\n",
     "        # lr_schedule\n",
-    "        None,\n",
+    "        lr_schedule=lr_schedule,\n",
     "        # n_steps\n",
-    "        None\n",
+    "        n_steps_per_checkpoint=10,\n",
     "    )\n",
     "\n",
     "    # define the eval task\n",
     "    eval_task = training.EvalTask(                      \n",
     "        # labeled data\n",
-    "        None,\n",
+    "        labeled_data=eval_gen,\n",
     "        # metrics\n",
-    "        None\n",
+    "        metrics=[tl.CrossEntropyLoss(), tl.Accuracy()]\n",
     "    )\n",
     "\n",
     "    ### END CODE HERE ###\n",
@@ -1389,20 +1389,20 @@
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' WITH YOUR CODE) ###\n",
     "    \n",
     "    # Create input tokens using the the tokenize function\n",
-    "    input_tokens = None\n",
+    "    input_tokens = tokenize(start_sentence, vocab_file, vocab_dir)\n",
     "    \n",
     "    # Add batch dimension to array. Convert from (n,) to (x, n) where \n",
     "    # x is the batch size. Default is 1. (hint: you can use np.expand_dims() with axis=0)\n",
-    "    input_tokens_with_batch = None\n",
+    "    input_tokens_with_batch = np.expand_dims(input_tokens, axis=0)\n",
     "    \n",
     "    # call the autoregressive_sample_stream function from trax\n",
     "    output_gen = trax.supervised.decoding.autoregressive_sample_stream( \n",
     "        # model\n",
-    "        None,\n",
+    "        model=ReformerLM,\n",
     "        # inputs will be the tokens with batch dimension\n",
-    "        None,\n",
+    "        inputs=input_tokens_with_batch,\n",
     "        # temperature\n",
-    "        None\n",
+    "        temperature=temperature\n",
     "    )\n",
     "    \n",
     "    ### END CODE HERE ###\n",
